
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_6__ ;
typedef struct TYPE_9__ TYPE_2__ ;
typedef struct TYPE_8__ TYPE_1__ ;


typedef int ssize_t ;
typedef TYPE_2__* client ;
typedef int aeEventLoop ;
struct TYPE_10__ {int requests; int slots_last_update; scalar_t__ cluster_mode; scalar_t__ randomkeys; int requests_issued; } ;
struct TYPE_9__ {scalar_t__ written; scalar_t__ staglen; int latency; TYPE_1__* context; void* obuf; int start; int slots_last_update; } ;
struct TYPE_8__ {int fd; } ;


 int AE_READABLE ;
 int AE_WRITABLE ;
 scalar_t__ EPIPE ;
 int UNUSED (int) ;
 int aeCreateFileEvent (int *,int ,int ,int ,TYPE_2__*) ;
 int aeDeleteFileEvent (int *,int ,int ) ;
 int atomicGet (int ,int ) ;
 int atomicGetIncr (int ,int,int) ;
 TYPE_6__ config ;
 scalar_t__ errno ;
 int fprintf (int ,char*,char*) ;
 int freeClient (TYPE_2__*) ;
 int randomizeClientKey (TYPE_2__*) ;
 int readHandler ;
 scalar_t__ sdslen (void*) ;
 int setClusterKeyHashTag (TYPE_2__*) ;
 int stderr ;
 char* strerror (scalar_t__) ;
 int ustime () ;
 int write (int ,void*,scalar_t__) ;

__attribute__((used)) static void writeHandler(aeEventLoop *el, int fd, void *privdata, int mask) {
    client c = privdata;
    UNUSED(el);
    UNUSED(fd);
    UNUSED(mask);


    if (c->written == 0) {

        int requests_issued = 0;
        atomicGetIncr(config.requests_issued, requests_issued, 1);
        if (requests_issued >= config.requests) {
            freeClient(c);
            return;
        }


        if (config.randomkeys) randomizeClientKey(c);
        if (config.cluster_mode && c->staglen > 0) setClusterKeyHashTag(c);
        atomicGet(config.slots_last_update, c->slots_last_update);
        c->start = ustime();
        c->latency = -1;
    }
    if (sdslen(c->obuf) > c->written) {
        void *ptr = c->obuf+c->written;
        ssize_t nwritten = write(c->context->fd,ptr,sdslen(c->obuf)-c->written);
        if (nwritten == -1) {
            if (errno != EPIPE)
                fprintf(stderr, "Writing to socket: %s\n", strerror(errno));
            freeClient(c);
            return;
        }
        c->written += nwritten;
        if (sdslen(c->obuf) == c->written) {
            aeDeleteFileEvent(el,c->context->fd,AE_WRITABLE);
            aeCreateFileEvent(el,c->context->fd,AE_READABLE,readHandler,c);
        }
    }
}
